<resources>
  <string name="app_name">Enjoy</string>
  <string name="settings_fragment_label">Einstellungen</string>
  <string name="login_fragment_label">Login</string>
  <string name="voting_fragment_label">Voting</string>
  <string name="setlist_overview_fragment_label">Setlisten</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>
  <string name="ok">OK</string>
  <string name="password">Passwort</string>
  <string name="logo">Logo</string>
  <string name="no">Nein</string>
  <string name="yes">Ja</string>
  <string name="user_label">Benutzer</string>
  <string name="user_hint">Benutzername</string>
  <string name="passwd_hint">Passwort</string>
  <string name="lostPassword">Wenn du dein Passwort vergessen hast, kannst du mit dem Passwort vergessen Button auf der
    Homepage dir ein neues generieren. Wenn das erledigt ist, kannst du dich mit der App anmelden.
  </string>
  <string name="lostPasswordBtn">Passwort vergessen</string>
  <string name="answerYes">+ %1d</string>
  <string name="answerNo">- %1d</string>
  <string name="answerUndef">\? %1d</string>
  <string name="setlist_fragment_label">Setliste</string>
</resources>