<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

  <ImageView
          android:src="@drawable/logo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/logo"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="4dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintEnd_toEndOf="parent"
          android:contentDescription="@string/logo"/>
  <EditText
          android:id="@+id/user"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          app:layout_constraintStart_toEndOf="@+id/labelUser"
          android:layout_marginLeft="16dp"
          android:layout_marginStart="16dp"
          android:hint="@string/user_hint"
          android:autofillHints="Benutzername"
          android:width="150dp"
          app:layout_constraintBottom_toBottomOf="@+id/labelUser"
          />
  <TextView
          android:text="@string/password"
          android:layout_width="wrap_content"
          android:labelFor="@id/password"
          android:layout_height="wrap_content"
          android:id="@+id/labelPassword"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          app:layout_constraintTop_toBottomOf="@+id/labelUser"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="-30dp"
          app:layout_constraintEnd_toStartOf="@+id/buttonOk"
          android:layout_marginRight="-30dp"/>
  <TextView
          android:text="@string/user_label"
          android:layout_width="wrap_content"
          android:labelFor="@id/user"
          android:layout_height="wrap_content"
          android:id="@+id/labelUser"
          app:layout_constraintTop_toBottomOf="@+id/logo"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          android:layout_marginTop="48dp"
          app:layout_constraintStart_toStartOf="@+id/labelPassword"/>
  <EditText
          android:id="@+id/password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          app:layout_constraintStart_toStartOf="@+id/user"
          android:hint="@string/passwd_hint"
          android:autofillHints="Benutzername"
          android:width="150dp"
          app:layout_constraintBottom_toBottomOf="@+id/labelPassword"
          />
  <Button
          android:id="@+id/buttonOk"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ok"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/labelPassword"
          android:layout_marginTop="20dp"/>
  <androidx.constraintlayout.widget.Guideline
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/guideline"
          app:layout_constraintGuide_begin="20dp"
          android:orientation="horizontal"/>
  <TextView
          android:layout_width="267dp"
          android:layout_height="102dp"
          android:gravity="start|top"
          android:ems="10"
          android:id="@+id/lostPassword"
          android:text="@string/lostPassword"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.505"
          app:layout_constraintBottom_toTopOf="@+id/buttonLostPasswort"
          android:layout_marginBottom="20dp"/>
  <Button
          android:id="@+id/buttonLostPasswort"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/lostPasswordBtn"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
