<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/LoginFragment">

  <fragment
          android:id="@+id/LoginFragment"
          android:name="de.whwk.enjoy.login.LoginFragment"
          android:label="@string/login_fragment_label"
          tools:layout="@layout/fragment_login">
    <action
            android:id="@+id/action_LoginFragment_to_VotingFragment"
            app:destination="@id/VotingFragment"/>
    <action
            android:id="@+id/to_SettingsFragment"
            app:destination="@id/SettingsFragment"/>
  </fragment>
  <fragment
          android:id="@+id/VotingFragment"
          android:name="de.whwk.enjoy.vote.VotingFragment"
          android:label="@string/voting_fragment_label"
          tools:layout="@layout/fragment_voting">
    <action
            android:id="@+id/action_VotingFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"/>
    <action
            android:id="@+id/to_SettingsFragment"
            app:destination="@id/SettingsFragment"/>
    <action android:id="@+id/action_VotingFragment_to_EventFragment"
            app:destination="@id/EventFragment"/>
  </fragment>
  <fragment
          android:id="@+id/SettingsFragment"
          android:name="de.whwk.enjoy.settings.SettingsFragment"
          android:label="@string/settings_fragment_label"
          tools:layout="@layout/fragment_voting">
    <action
            android:id="@+id/action_SettingsFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"/>
  </fragment>
  <fragment android:id="@+id/EventFragment"
            android:name="de.whwk.enjoy.event.EventFragment"
            android:label="EventFragment"
            tools:layout="@layout/fragment_event">
    <action
            android:id="@+id/to_SettingsFragment"
            app:destination="@id/SettingsFragment"/>
  </fragment>
</navigation>